<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cards_ui_2"
    tools:context="com.tokopedia.tkpd.session.RegisterNewViewFragment">

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/register_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_register_process"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/login_button">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_med"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/margin_med"
                        android:layout_height="@dimen/margin_med"
                        android:background="@drawable/circle_green"
                        android:textColor="@color/white"
                        android:text="1"
                        android:gravity="center"/>

                    <TextView
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:layout_width="135dp"
                        android:layout_height="0.1dp"
                        android:layout_gravity="center"
                        android:background="@color/time_color"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="@dimen/margin_med"
                        android:layout_height="@dimen/margin_med"
                        android:background="@drawable/circle"
                        android:textColor="@color/white"
                        android:text="2"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="match_parent"></LinearLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="40"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="Buat Akun Tokopedia"
                        android:textSize="@dimen/fontvs"
                        android:textStyle="bold"
                        android:id="@+id/textView4" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="45"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="Isi data dirimu"
                        android:textSize="@dimen/fontvs"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="match_parent"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_full_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">
                <AutoCompleteTextView
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/title_email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">
                <com.tokopedia.core.session.PasswordView
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:imeActionId="@+id/register_button"
                    android:imeActionLabel="Lanjut"
                    android:imeOptions="actionUnspecified"
                    android:typeface="sans"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:id="@+id/register_next">
                <TextView
                    android:id="@+id/register_next_button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/deep_orange_500"
                    android:gravity="center"
                    android:text="@string/title_next"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontvs"
                    android:textStyle="bold" />

                <ProgressBar
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/register_next_progress"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:visibility="invisible"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/login_button"
        android:padding="@dimen/padding_med"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:text="Sudah punya akun? Masuk"
        android:gravity="center"
        android:textColor="@color/grey_500"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/register_status"
        android:layout_alignStart="@+id/register_status" />

</RelativeLayout>