...
                android:padding="@dimen/padding_vs"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xlarge"
                tools:text="Halo, Alessandro !"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">
                <EditText
                    android:id="@+id/register_next_phone_number"
                    android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_med"
                android:id="@+id/register_next_detail_t_and_p"
                android:textSize="@dimen/fontvs"
                android:textStyle="bold"
                tools:text="Dengan menekan "/>

        </LinearLayout>
    </ScrollView>
...
