...
                </RelativeLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_error_geo_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error_field_required"
                    android:textColor="@color/red_400"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
...
